--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "metamodels",
     "frontend-editing"
   ],
-  "type": "contao-module",
+  "type": "contao-bundle",
   "homepage": "http://now.metamodel.me/",
   "license": "LGPL-3.0+",
   "authors": [
@@ -31,15 +31,11 @@
   },
   "require": {
     "php": ">=5.4",
-    "contao/core": "^3.5.5",
-    "contao-community-alliance/composer-plugin": "~2.0",
-    "contao-community-alliance/dc-general-contao-frontend": "~2.0@dev",
-    "contao-community-alliance/dc-general": "~2.0@dev",
+    "contao/core-bundle": "^4.4",
+    "contao-community-alliance/dc-general-contao-frontend": "~2.1@dev",
+    "contao-community-alliance/dc-general": "~2.1@dev",
     "contao-community-alliance/url-builder": "~1.1",
-    "contao-community-alliance/dependency-container": "~1.6",
-    "contao-community-alliance/event-dispatcher": "~1.3",
-    "contao-community-alliance/events-contao-bindings": "~3.2",
-    "metamodels/core": "~2.0@dev"
+    "metamodels/core": "~2.1@dev"
   },
   "require-dev": {
     "cyberspectrum/contao-toolbox": "~0.6",
@@ -74,7 +70,13 @@
     },
     "branch-alias": {
       "dev-master": "2.0.x-dev",
-      "dev-develop": "2.1.x-dev"
+      "dev-contao4": "2.1.x-dev"
     }
-  }
+  },
+ "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@github.com:richardhj/dc-general-contao-frontend.git"
+    }
+  ]
 }
