--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
 language: php
  
 php:
-  - "5.4"
-  - "5.5"
   - "5.6"
   - "7.0"
   - "7.1"
 
 env:
-  - CONTAO_VERSION=~3.5.0
+  - CONTAO_VERSION=~4.4.0
 
 sudo: false
+
+before_install:
+  - phpenv config-add travis.php.ini
  
 before_script:
   - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
