--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "metamodels/core": "~2.1@dev"
   },
   "require-dev": {
+    "contao/manager-plugin": "~2.1",
     "cyberspectrum/contao-toolbox": "~0.6",
     "phpcq/all-tasks": "~1.1",
     "metamodels/base-unit-tests": "~1.0",
@@ -54,6 +55,7 @@
     }
   },
   "extra": {
+    "contao-manager-plugin": "MetaModels\\Contao\\FrontendEditing\\ContaoManager\\Plugin",
     "contao": {
       "sources": {
         "contao": "system/modules/metamodels-contao-frontend-editing"
@@ -61,7 +63,7 @@
       "transifex": {
         "project": "metamodels",
         "prefix": "contao-frontend-editing-",
-        "languages_cto": "contao/languages",
+        "languages_cto": "src/Resources/contao/languages",
         "languages_tx": ".tx"
       },
       "runonce": [
