Hide addUrl when definition is not creatable.

--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -4,6 +4,7 @@ services:
         arguments:
           - '@contao.translation.translator'
           - '@event_dispatcher'
+          - '@metamodels.factory'
           - '@cca.dc-general.contao_frontend.editor'
         tags:
           - { name: kernel.event_listener, event: 'metamodels.render-item-list', method: handleFrontendEditingInListRendering }
