--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,7 @@
     },
     "branch-alias": {
       "dev-master": "2.0.x-dev",
-      "dev-contao4": "2.1.x-dev"
+      "dev-feature/contao4": "2.1.x-dev"
     }
   }
 }
