--- a/composer.json
+++ b/composer.json
@@ -31,21 +31,21 @@
   },
   "require": {
     "php": ">=5.4",
-    "contao/core": "^3.5.5",
     "contao-community-alliance/composer-plugin": "~2.0",
-    "contao-community-alliance/dc-general-contao-frontend": "~2.0@dev",
     "contao-community-alliance/dc-general": "~2.0@dev",
-    "contao-community-alliance/url-builder": "~1.1",
+    "contao-community-alliance/dc-general-contao-frontend": "~2.0@dev",
     "contao-community-alliance/dependency-container": "~1.6",
     "contao-community-alliance/event-dispatcher": "~1.3",
     "contao-community-alliance/events-contao-bindings": "~3.2",
+    "contao-community-alliance/url-builder": "~1.1",
+    "contao/core": "^3.5.5",
     "metamodels/core": "~2.0@dev"
   },
   "require-dev": {
     "cyberspectrum/contao-toolbox": "~0.6",
-    "phpcq/all-tasks": "~1.1",
     "metamodels/base-unit-tests": "~1.0",
-    "metamodels/phpunit-contao-database": "~1.0"
+    "metamodels/phpunit-contao-database": "~1.0",
+    "phpcq/all-tasks": "~1.1"
   },
   "autoload": {
     "psr-4": {
@@ -76,5 +76,8 @@
       "dev-master": "2.0.x-dev",
       "dev-develop": "2.1.x-dev"
     }
+  },
+  "config": {
+    "sort-packages": true
   }
 }
