--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "source": "https://github.com/MetaModels/contao-frontend-editing"
   },
   "require": {
-    "php": ">=5.4",
+    "php": "^5.6 || ^7.0",
     "contao-community-alliance/composer-plugin": "~2.0",
     "contao-community-alliance/dc-general": "~2.0@dev",
     "contao-community-alliance/dc-general-contao-frontend": "~2.0@dev",
