--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
   "require": {
     "php": "^5.6 || ^7.0",
     "contao-community-alliance/composer-plugin": "^2.4",
-    "contao-community-alliance/dc-general": "~2.0@dev",
+    "contao-community-alliance/dc-general": "^2.0.0-beta49@beta",
     "contao-community-alliance/dc-general-contao-frontend": "~2.0@dev",
     "contao-community-alliance/dependency-container": "~1.6",
     "contao-community-alliance/event-dispatcher": "~1.3",
