--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
     "cyberspectrum/contao-toolbox": "~0.6",
     "metamodels/base-unit-tests": "~1.0",
     "metamodels/phpunit-contao-database": "~1.0",
-    "phpcq/all-tasks": "~1.1"
+    "phpcq/all-tasks": "^1.2"
   },
   "autoload": {
     "psr-4": {
