--- a/composer.json
+++ b/composer.json
@@ -35,14 +35,12 @@
     "contao-community-alliance/dc-general-contao-frontend": "~2.1@dev",
     "contao-community-alliance/dc-general": "~2.1@dev",
     "contao-community-alliance/url-builder": "~1.1",
+    "menatwork/contao-multicolumnwizard-bundle": "^3.4.0@beta",
     "metamodels/core": "~2.1@dev"
   },
   "require-dev": {
     "contao/manager-plugin": "~2.1",
-    "cyberspectrum/contao-toolbox": "~0.6",
-    "phpcq/all-tasks": "~1.1",
-    "metamodels/base-unit-tests": "~1.0",
-    "metamodels/phpunit-contao-database": "~1.0"
+    "phpcq/all-tasks": "~1.2"
   },
   "autoload": {
     "psr-4": {
