--- a/composer.json
+++ b/composer.json
@@ -31,16 +31,16 @@
   },
   "require": {
     "php": "^7.1",
-    "contao-community-alliance/dc-general": "~2.1@dev",
+    "contao-community-alliance/dc-general": "^2.1.0",
     "contao-community-alliance/dc-general-contao-frontend": "~2.1@dev",
     "contao-community-alliance/url-builder": "~1.1",
-    "contao/core-bundle": "^4.4",
-    "menatwork/contao-multicolumnwizard-bundle": "^3.4.0@beta",
+    "contao/core-bundle": "^4.4.8",
+    "menatwork/contao-multicolumnwizard-bundle": "^3.4",
     "metamodels/core": "~2.1@dev"
   },
   "require-dev": {
-    "contao/manager-plugin": "~2.1",
-    "phpcq/all-tasks": "~1.2"
+    "contao/manager-plugin": "^2.1",
+    "phpcq/all-tasks": "^1.2"
   },
   "autoload": {
     "psr-4": {
