--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -1,5 +1,5 @@
 services:
-    metamodels.contao_frontend_editing.render_item_list_listener:
+    metamodels.contao_frontend_editing.listener.render_item_list:
         class: MetaModels\ContaoFrontendEditingBundle\EventListener\RenderItemListListener
         arguments:
           - '@contao.translation.translator'
@@ -9,3 +9,11 @@ services:
         tags:
           - { name: kernel.event_listener, event: 'metamodels.render-item-list', method: handleFrontendEditingInListRendering }
           - { name: kernel.event_listener, event: 'metamodels.parse-item', method: handleForItemRendering }
+
+    metamodels.contao_frontend_editing.listener.dc-general.action_handler.create_variant:
+        class: MetaModels\ContaoFrontendEditingBundle\EventListener\DcGeneral\ActionEvent\CreateVariantHandler
+        arguments:
+          - '@cca.dc-general.scope-matcher'
+          - '@metamodels.factory'
+        tags:
+          - { name: kernel.event_listener, event: dc-general.action, method: handleEvent }
