--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,12 @@
     },
     "require": {
         "php": "^7.1",
-        "contao-community-alliance/dc-general": "^2.1.3",
-        "contao-community-alliance/dc-general-contao-frontend": "~2.1@dev",
-        "contao-community-alliance/url-builder": "~1.1",
+        "contao-community-alliance/dc-general": "^2.1.5",
+        "contao-community-alliance/dc-general-contao-frontend": "^2.1",
+        "contao-community-alliance/url-builder": "^1.3",
         "contao/core-bundle": "^4.4.8",
         "menatwork/contao-multicolumnwizard-bundle": "^3.4",
-        "metamodels/core": "~2.1@dev"
+        "metamodels/core": "^2.1"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.1",
