--- a/composer.json
+++ b/composer.json
@@ -36,11 +36,14 @@
         "contao-community-alliance/url-builder": "^1.3",
         "contao/core-bundle": "^4.9.0, <4.13.0",
         "menatwork/contao-multicolumnwizard-bundle": "^3.4",
-        "metamodels/core": "^2.1"
+        "metamodels/core": "^2.1",
+        "symfony/http-foundation": "4.4.*",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.8",
-        "phpcq/all-tasks": "^1.2"
+        "phpcq/all-tasks": "^1.2",
+        "terminal42/notification_center": "^1.5.8"
     },
     "autoload": {
         "psr-4": {
