--- a/composer.json
+++ b/composer.json
@@ -31,15 +31,15 @@
     },
     "require": {
         "php": "^7.2",
-        "contao-community-alliance/dc-general": "^2.1.5",
-        "contao-community-alliance/dc-general-contao-frontend": "^2.1",
+        "contao-community-alliance/dc-general": "^2.2@dev",
+        "contao-community-alliance/dc-general-contao-frontend": "^2.2@dev",
         "contao-community-alliance/url-builder": "^1.3",
         "contao/core-bundle": "^4.9.0, <4.13.0",
         "menatwork/contao-multicolumnwizard-bundle": "^3.4",
         "metamodels/core": "^2.1"
     },
     "require-dev": {
-        "contao/manager-plugin": "^2.1",
+        "contao/manager-plugin": "^2.8",
         "phpcq/all-tasks": "^1.2"
     },
     "autoload": {
