--- a/.check-author.yml
+++ b/.check-author.yml
@@ -3,3 +3,9 @@ exclude:
 
 ignore:
   - 'Mini Model <minimodel@metamodel.me>'
+
+mapping:
+  'Ingolf Steinhardt <info@e-spin.de>':
+    - 'xantippe <info@e-spin.de>'
+    - 'zonky2 <info@e-spin.de>'
+    - 'zonky <gitlab@e-spin.de>'
