Add simple tokens in get params

--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -54,6 +54,7 @@ services:
         arguments:
             - '@MetaModels\ViewCombination\ViewCombination'
             - '@=service("contao.framework").getAdapter("Contao\\PageModel")'
+            - '@=service("contao.framework").getAdapter("Contao\\StringUtil")'
         tags:
             -   name: kernel.event_listener
                 event: dc-general.contao-frontend.handle-submit
