--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
         "frontend-editing"
     ],
     "type": "contao-bundle",
-    "homepage": "http://now.metamodel.me/",
+    "homepage": "https://now.metamodel.me/",
     "license": "LGPL-3.0-or-later",
     "authors": [
         {
             "name": "Christian Schiffler",
             "email": "c.schiffler@cyberspectrum.de",
-            "homepage": "http://www.cyberspectrum.de",
+            "homepage": "https://www.cyberspectrum.de",
             "role": "Developer"
         },
         {
@@ -25,20 +25,20 @@
     "support": {
         "email": "mail@metamodel.me",
         "issues": "https://github.com/MetaModels/contao-frontend-editing/issues",
-        "wiki": "http://de.contaowiki.org/MetaModels",
+        "wiki": "https://de.contaowiki.org/MetaModels",
         "irc": "irc://irc.freenode.org/contao.mm",
         "source": "https://github.com/MetaModels/contao-frontend-editing"
     },
     "require": {
-        "php": "^7.4",
+        "php": "^7.4 || ^8.0",
         "ext-pdo": "*",
-        "contao-community-alliance/dc-general": "^2.2",
-        "contao-community-alliance/dc-general-contao-frontend": "^2.2.1",
+        "contao-community-alliance/dc-general": "^2.3@dev",
+        "contao-community-alliance/dc-general-contao-frontend": "^2.3@dev",
         "contao-community-alliance/url-builder": "^1.3",
-        "contao/core-bundle": "^4.9.0, <4.13.0",
+        "contao/core-bundle": "^4.13.0, <5.0",
         "menatwork/contao-multicolumnwizard-bundle": "^3.4",
-        "metamodels/core": "^2.1",
-        "symfony/http-foundation": "4.4.*"
+        "metamodels/core": "^2.3@dev",
+        "symfony/http-foundation": "^5.4"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.8",
@@ -58,7 +58,7 @@
     "extra": {
         "contao-manager-plugin": "MetaModels\\ContaoFrontendEditingBundle\\ContaoManager\\Plugin",
         "branch-alias": {
-            "dev-feature/2.2.0": "2.2.x-dev"
+            "dev-feature/2.3.0": "2.3.x-dev"
         }
     },
     "config": {
