--- a/composer.json
+++ b/composer.json
@@ -30,15 +30,15 @@
         "source": "https://github.com/MetaModels/contao-frontend-editing"
     },
     "require": {
-        "php": "^7.2",
-        "contao-community-alliance/dc-general": "^2.2@dev",
-        "contao-community-alliance/dc-general-contao-frontend": "^2.2@dev",
+        "php": "^7.4",
+        "ext-pdo": "*",
+        "contao-community-alliance/dc-general": "^2.2",
+        "contao-community-alliance/dc-general-contao-frontend": "^2.2.1",
         "contao-community-alliance/url-builder": "^1.3",
         "contao/core-bundle": "^4.9.0, <4.13.0",
         "menatwork/contao-multicolumnwizard-bundle": "^3.4",
         "metamodels/core": "^2.1",
-        "symfony/http-foundation": "4.4.*",
-        "ext-pdo": "*"
+        "symfony/http-foundation": "4.4.*"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.8",
