--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,10 @@
         }
     },
     "config": {
+      "allow-plugins": {
+        "contao-components/installer": false,
+        "contao/manager-plugin": false
+      },
         "sort-packages": true
     }
 }
