--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
         "frontend-editing"
     ],
     "type": "contao-bundle",
-    "homepage": "http://now.metamodel.me/",
+    "homepage": "https://now.metamodel.me/",
     "license": "LGPL-3.0-or-later",
     "authors": [
         {
             "name": "Christian Schiffler",
             "email": "c.schiffler@cyberspectrum.de",
-            "homepage": "http://www.cyberspectrum.de",
+            "homepage": "https://www.cyberspectrum.de",
             "role": "Developer"
         },
         {
@@ -25,7 +25,7 @@
     "support": {
         "email": "mail@metamodel.me",
         "issues": "https://github.com/MetaModels/contao-frontend-editing/issues",
-        "wiki": "http://de.contaowiki.org/MetaModels",
+        "wiki": "https://de.contaowiki.org/MetaModels",
         "irc": "irc://irc.freenode.org/contao.mm",
         "source": "https://github.com/MetaModels/contao-frontend-editing"
     },
@@ -37,8 +37,8 @@
         "contao-community-alliance/url-builder": "^1.3",
         "contao/core-bundle": "^4.9.0, <4.13.0",
         "menatwork/contao-multicolumnwizard-bundle": "^3.4",
-        "metamodels/core": "^2.1",
-        "symfony/http-foundation": "4.4.*"
+        "metamodels/core": "^2.2",
+        "symfony/http-foundation": "^4.4.6"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.8",
