--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,7 @@
     },
     "config": {
       "allow-plugins": {
+        "contao-community-alliance/composer-plugin": false,
         "contao-components/installer": false,
         "contao/manager-plugin": false
       },
