--- a/.check-author.yml
+++ b/.check-author.yml
@@ -6,6 +6,7 @@ ignore:
 
 mapping:
   'Ingolf Steinhardt <info@e-spin.de>':
+    - 'Ingolf Steinhardt <git@e-spin.de>'
     - 'xantippe <info@e-spin.de>'
     - 'zonky2 <info@e-spin.de>'
     - 'zonky <gitlab@e-spin.de>'
