--- a/build.default.properties
+++ b/build.default.properties
@@ -7,4 +7,5 @@
 
 phpcs.standard=${basedir}/vendor/phpcq/coding-standard/phpcs/PhpCodeQuality/ruleset.xml
 phpmd.ruleset=${basedir}/vendor/phpcq/coding-standard/phpmd/ruleset.xml
-phpcs.excluded=src/Resources/contao/languages
+phpcs.excluded=src/Resources/contao/languages\
+               ,src/Resources/public
