--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
   "extra": {
     "contao-manager-plugin": "MetaModels\\ContaoFrontendEditingBundle\\ContaoManager\\Plugin",
     "branch-alias": {
-      "dev-feature/2.2.0": "2.2.x-dev"
+      "dev-hotfix/2.2.1": "2.2.1-dev"
     }
   },
   "config": {
