Rewrite code and output edit links if item editable

--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -6,6 +6,8 @@ services:
           - '@event_dispatcher'
           - '@metamodels.factory'
           - '@cca.dc-general.contao_frontend.editor'
+          - '@Symfony\Component\Security\Core\Security'
+          - '@metamodels.view_combination.input_screen_information_builder'
         tags:
           - { name: kernel.event_listener, event: 'metamodels.render-item-list', method: handleFrontendEditingInListRendering }
           - { name: kernel.event_listener, event: 'metamodels.parse-item', method: handleForItemRendering }
@@ -73,11 +75,12 @@ services:
     MetaModels\ContaoFrontendEditingBundle\EventListener\DcGeneral\EditMaskMemberPermissionListener:
         public: true
         arguments:
-            - "@cca.dc-general.scope-matcher"
-            - "@contao.framework"
-            - "@metamodels.view_combination.input_screen_information_builder"
+            - '@cca.dc-general.scope-matcher'
+            - '@Symfony\Component\Security\Core\Security'
+            - '@metamodels.view_combination.input_screen_information_builder'
         tags:
             - { name: kernel.event_listener, event: dc-general.model.pre-persist, method: saveMemberId }
             - { name: kernel.event_listener, event: dc-general.model.pre-edit-model, method: checkPreEditFee }
             - { name: kernel.event_listener, event: dc-general.model.pre-persist, method: checkSaveFee }
+            - { name: kernel.event_listener, event: dc-general.model.pre-duplicate, method: checkDuplicateFee }
             - { name: kernel.event_listener, event: dc-general.model.pre-delete, method: checkDeleteFee }
