--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -62,10 +62,10 @@ services:
                 event: dc-general.contao-frontend.handle-submit
                 priority: 128
 
-    MetaModels\ContaoFrontendEditingBundle\EventListener\DcGeneral\Table\Dca\GetAttributeMemberListener:
+    MetaModels\ContaoFrontendEditingBundle\EventListener\DcGeneral\Table\FilterSetting\GetAttributeMemberListener:
         arguments:
             - '@cca.dc-general.scope-matcher'
-            - '@metamodels.factory'
+            - '@metamodels.filter_setting_factory'
             - '@MetaModels\CoreBundle\Formatter\SelectAttributeOptionLabelFormatter'
         tags:
             -
