--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "source": "https://github.com/MetaModels/contao-frontend-editing"
   },
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": "^8.1",
     "ext-pdo": "*",
     "contao-community-alliance/dc-general": "^2.3@dev",
     "contao-community-alliance/dc-general-contao-frontend": "^2.3@dev",
