--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
   "require": {
     "php": "^8.1",
     "ext-pdo": "*",
-    "contao-community-alliance/dc-general": "^2.3@dev",
+    "contao-community-alliance/dc-general": "^2.3",
     "contao-community-alliance/dc-general-contao-frontend": "^2.3@dev",
     "contao-community-alliance/url-builder": "^1.3",
     "contao/core-bundle": "^4.13.0, <5.0",
