--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "contao-community-alliance/url-builder": "^1.3",
     "contao/core-bundle": "^4.13.0 <5.0",
     "menatwork/contao-multicolumnwizard-bundle": "^3.4",
-    "metamodels/core": "dev-feature/phpcq-2 as 2.3.0",
+    "metamodels/core": "^2.3@dev",
     "symfony/http-foundation": "^5.4"
   },
   "require-dev": {
@@ -72,7 +72,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-feature/2.3.0": "2.3.x-dev"
+      "dev-feature/2.3.0": "2.3.x-dev",
+      "dev-hotfix/phpcq-2": "2.3.x-dev"
     },
     "contao-manager-plugin": "MetaModels\\ContaoFrontendEditingBundle\\ContaoManager\\Plugin"
   }
