--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,13 @@
     "email": "mail@metamodel.me",
     "issues": "https://github.com/MetaModels/contao-frontend-editing/issues",
     "wiki": "https://de.contaowiki.org/MetaModels",
-    "irc": "irc://irc.freenode.org/contao.mm",
     "source": "https://github.com/MetaModels/contao-frontend-editing"
   },
   "require": {
     "php": "^8.1",
     "ext-pdo": "*",
     "contao-community-alliance/dc-general": "^2.3",
-    "contao-community-alliance/dc-general-contao-frontend": "^2.3@dev",
+    "contao-community-alliance/dc-general-contao-frontend": "^2.3",
     "contao-community-alliance/url-builder": "^1.3",
     "contao/core-bundle": "^4.13.0 <5.0",
     "menatwork/contao-multicolumnwizard-bundle": "^3.4",
@@ -45,12 +44,6 @@
     "phpcq/runner-bootstrap": "^1.0@dev",
     "terminal42/notification_center": "^1.5.8"
   },
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://packages.cyberspectrum.de/r"
-    }
-  ],
   "autoload": {
     "psr-4": {
       "MetaModels\\ContaoFrontendEditingBundle\\": "src"
@@ -72,8 +65,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-feature/2.3.0": "2.3.x-dev",
-      "dev-hotfix/phpcq-2": "2.3.x-dev"
+      "dev-feature/2.3.0": "2.3.x-dev"
     },
     "contao-manager-plugin": "MetaModels\\ContaoFrontendEditingBundle\\ContaoManager\\Plugin"
   }
