--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
   "require-dev": {
     "contao/manager-plugin": "^2.8",
     "phpcq/runner-bootstrap": "^1.0@dev",
-    "terminal42/notification_center": "^1.5.8"
+    "terminal42/notification_center": "^1.5.8 || ^2.0"
   },
   "autoload": {
     "psr-4": {
