--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "contao-community-alliance/url-builder": "^1.3",
     "contao/core-bundle": "^4.13.0 <5.0",
     "menatwork/contao-multicolumnwizard-bundle": "^3.4",
-    "metamodels/core": "^2.3@dev",
+    "metamodels/core": "^2.3",
     "symfony/http-foundation": "^5.4"
   },
   "require-dev": {
